@@ -3,6 +3,7 @@
 	* shr.el (shr-ensure-paragraph): Fix the non-empty line case.
 	(shr-insert): Tweak line breaking.
 	(shr-insert): Handle <pre> better.
+	(shr-tag-li): Get <li> indentation right.
 
 2010-10-04  Julien Danjou  <julien@danjou.info>
 
